[gd_scene load_steps=4 format=3 uid="uid://cub7ww8tasctp"]

[ext_resource type="Theme" uid="uid://bytiyxp3n1j8y" path="res://assets/default_theme.tres" id="1_7scqo"]
[ext_resource type="Script" path="res://ui/scroll_list.gd" id="1_hg7oy"]
[ext_resource type="PackedScene" uid="uid://buyno527k2tph" path="res://ui/resource_button.tscn" id="3_h2mrn"]

[node name="ScrollList" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_7scqo")
script = ExtResource("1_hg7oy")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(96, 28)
layout_mode = 2
theme = ExtResource("1_7scqo")
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_right = 6

[node name="ButtonContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 1

[node name="ResourceButton" parent="MarginContainer/ScrollContainer/MarginContainer/ButtonContainer" instance=ExtResource("3_h2mrn")]
layout_mode = 2
text = "Button"

[node name="ResourceButton2" parent="MarginContainer/ScrollContainer/MarginContainer/ButtonContainer" instance=ExtResource("3_h2mrn")]
layout_mode = 2
text = "Button"

[node name="ResourceButton3" parent="MarginContainer/ScrollContainer/MarginContainer/ButtonContainer" instance=ExtResource("3_h2mrn")]
layout_mode = 2
text = "Button"
